--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="nav__menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link">
+                        <a href="#home" class="nav__link active-link">
                             <i class="bx bx-home-alt-2"></i>
                             <span>Home</span>
                         </a>
@@ -59,6 +59,11 @@
                     </li>
                 </ul>
             </div>
+
+            <!-- Theme change button -->
+
+            <i class='bx bx-moon change-theme' id="theme-button"></i>
+
             <a href="" class="button nav__button"> Subscribe </a>
         </nav>
     </header>
@@ -509,7 +514,7 @@
 
         <div class="footer__info container">
             <span class="footer__copy">
-                &#169; Bedimcode. All rigths reserved
+                &#169; AsgerIsmayil. All rigths reserved
             </span>
 
             <div class="footer__privacy">
@@ -520,9 +525,11 @@
     </footer>
 
     <!--========== SCROLL UP ==========-->
-
+    <a href="#" id="scroll-up" class="scrollup">
+        <i class='bx bx-chevrons-up' ></i>
+    </a>
     <!--=============== SCROLLREVEAL ===============-->
-    <script src=""></script>
+    <script src="./assets/js/scrollreveal.min.js"></script>
 
     <!--=============== SWIPER JS ===============-->
     <script src="./assets/js/swiper-bundle.min.js"></script>
