--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                Holux <i class="bx bxs-home-alt-2"></i>
+                Soldi <i class='bx bxs-coffee'></i>
             </a>
 
             <div class="nav__menu">
@@ -40,7 +40,7 @@
                     <li class="nav__item">
                         <a href="#popular" class="nav__link">
                             <i class="bx bx-building-house"></i>
-                            <span>Residences</span>
+                            <span>Vari</span>
                         </a>
                     </li>
 
@@ -151,7 +151,7 @@
                 <div class="popular__container swiper">
                     <div class="swiper-wrapper">
                         <article class="popular__card swiper-slide">
-                            <img src="./assets/img/popular1.jpg" class="popular__img" alt="" />
+                            <img src="" class="popular__img" alt="" />
 
                             <div class="popular__data">
                                 <h2 class="popular__price"><span>$</span>66,356</h2>
@@ -164,7 +164,7 @@
                         </article>
 
                         <article class="popular__card swiper-slide">
-                            <img src="./assets/img/popular2.jpg" class="popular__img" alt="" />
+                            <img src="" class="popular__img" alt="" />
 
                             <div class="popular__data">
                                 <h2 class="popular__price"><span>$</span>35,159</h2>
@@ -177,7 +177,7 @@
                         </article>
 
                         <article class="popular__card swiper-slide">
-                            <img src="./assets/img/popular3.jpg" class="popular__img" alt="" />
+                            <img src="" class="popular__img" alt="" />
 
                             <div class="popular__data">
                                 <h2 class="popular__price"><span>$</span>75,043</h2>
@@ -190,7 +190,7 @@
                         </article>
 
                         <article class="popular__card swiper-slide">
-                            <img src="./assets/img/popular4.jpg" class="popular__img" alt="" />
+                            <img src="" class="popular__img" alt="" />
 
                             <div class="popular__data">
                                 <h2 class="popular__price"><span>$</span>62,024</h2>
@@ -203,7 +203,83 @@
                         </article>
 
                         <article class="popular__card swiper-slide">
-                            <img src="./assets/img/popular5.jpg" class="popular__img" alt="" />
+                            <img src="" class="popular__img" alt="" />
+
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>$</span>47,043</h2>
+                                <h3 class="popular__title">Aliva Private Garden</h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol
+                                    #9876
+                                </p>
+                            </div>
+                        </article>
+
+                        <article class="popular__card swiper-slide">
+                            <img src="" class="popular__img" alt="" />
+
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>$</span>62,024</h2>
+                                <h3 class="popular__title">Luxurious City Garden</h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol
+                                    #9876
+                                </p>
+                            </div>
+                        </article>
+
+                        <article class="popular__card swiper-slide">
+                            <img src="" class="popular__img" alt="" />
+
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>$</span>47,043</h2>
+                                <h3 class="popular__title">Aliva Private Garden</h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol
+                                    #9876
+                                </p>
+                            </div>
+                        </article>
+                        <article class="popular__card swiper-slide">
+                            <img src="" class="popular__img" alt="" />
+
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>$</span>62,024</h2>
+                                <h3 class="popular__title">Luxurious City Garden</h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol
+                                    #9876
+                                </p>
+                            </div>
+                        </article>
+
+                        <article class="popular__card swiper-slide">
+                            <img src="" class="popular__img" alt="" />
+
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>$</span>47,043</h2>
+                                <h3 class="popular__title">Aliva Private Garden</h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol
+                                    #9876
+                                </p>
+                            </div>
+                        </article>
+                        <article class="popular__card swiper-slide">
+                            <img src="" class="popular__img" alt="" />
+
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>$</span>62,024</h2>
+                                <h3 class="popular__title">Luxurious City Garden</h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol
+                                    #9876
+                                </p>
+                            </div>
+                        </article>
+
+                        <article class="popular__card swiper-slide">
+                            <img src="" class="popular__img" alt="" />
 
                             <div class="popular__data">
                                 <h2 class="popular__price"><span>$</span>47,043</h2>
